--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           go-version: 1.15
       - uses: golangci/golangci-lint-action@v2
-      - run: go vet
-      - run: go test -v
+      - run: go vet ./...
+      - run: go test ./... -v
